finished quote section

--- a/index.html
+++ b/index.html
@@ -66,6 +66,17 @@
                 <button class="btn-1">Learn More</button>
             </div>
         </div>
+        <div class="quote-card">
+            <p class="quote">
+                "Imagine a world where no one has to worry about food, shelter, or education. Imagine a world where technology is used not to create massive wealth gaps but to solve problems that affect billions. A world where businesses measure their success not by profits but by how many lives they have changed. This is not just a dream. It’s entirely possible, but only if we change the way we think and act. We must stop waiting for others to solve the problems we see around us. We are the ones we’ve been waiting for."
+            </p>
+            <h3>
+                Dr. Muhammad Yunus
+            </h3>
+            <p>
+                Chief Adviser of the People's Republic of Bangladesh
+            </p>
+        </div>
     </main>
 </body>
 
