finished news section

--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
     </header>
     <main>
         <div>
-            <h2>The Vision of Future</h2>
-            <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.
+            <h2 class="title-heading">The Vision of Future</h2>
+            <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting
+                inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital
+                transformation, and robust infrastructure, the country is set to become a global model of development.
             </p>
         </div>
         <div class="card-container">
@@ -41,7 +43,8 @@
                     Digital Transformation
                 </h4>
                 <p>
-                    Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.
+                    Creating a nationwide digital ecosystem to enhance connectivity and access to services for all
+                    citizens.
                 </p>
                 <button class="btn-1">Learn More</button>
             </div>
@@ -68,13 +71,78 @@
         </div>
         <div class="quote-card">
             <p class="quote">
-                "Imagine a world where no one has to worry about food, shelter, or education. Imagine a world where technology is used not to create massive wealth gaps but to solve problems that affect billions. A world where businesses measure their success not by profits but by how many lives they have changed. This is not just a dream. It’s entirely possible, but only if we change the way we think and act. We must stop waiting for others to solve the problems we see around us. We are the ones we’ve been waiting for."
+                "Imagine a world where no one has to worry about food, shelter, or education. Imagine a world where
+                technology is used not to create massive wealth gaps but to solve problems that affect billions. A world
+                where businesses measure their success not by profits but by how many lives they have changed. This is
+                not just a dream. It’s entirely possible, but only if we change the way we think and act. We must stop
+                waiting for others to solve the problems we see around us. We are the ones we’ve been waiting for."
             </p>
             <h3>
                 Dr. Muhammad Yunus
             </h3>
             <p>
                 Chief Adviser of the People's Republic of Bangladesh
+            </p>
+        </div>
+        <div>
+            <div>
+                <h2 class="title-heading">Recent News</h2>
+                <p>Bangladesh 2.0 envisions a future driven by innovation, inclusivity, and sustainability. By fostering
+                    advancements in technology, renewable energy, and modern infrastructure, it is paving the way for a
+                    thriving nation that serves as a global benchmark for development.
+                </p>
+            </div>
+            <div class="satelite-card">
+                <div>
+                    <img class="satelite-img" src="assets/satelite.png" alt="">
+                </div>
+                <div>
+                    <h2 class="satelite-card-heading">Bangladesh Launches New Satellite</h2>
+                    <img class="al-jazeera" src="assets/al-jazeera.png" alt="">
+                    <p class="date">Date: 05/01/2025 &nbsp Time: 10.25 PM</p>
+                    <p>Not until the creation and maintenance of decent conditions of life for all people are recognized
+                        and accepted as a common obligation of all people and all countries—not until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized
+                    </p>
+                    <button class="satelite-card-btn">Read More</button>
+                </div>
+            </div>
+            <div class="satelite-card-2">
+                <div>
+                    <img class="satelite-img" src="assets/satelite.png" alt="">
+                </div>
+                <div>
+                    <h2 class="satelite-card-heading">Bangladesh Launches New Satellite</h2>
+                    <img class="al-jazeera" src="assets/al-jazeera.png" alt="">
+                    <p class="date">Date: 05/01/2025 &nbsp Time: 10.25 PM</p>
+                    <p>Not until the creation and maintenance of decent conditions of life for all people are recognized
+                        and accepted as a common obligation of all people and all countries—not until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized
+                    </p>
+                    <button class="satelite-card-btn">Read More</button>
+                </div>
+            </div>
+            <div class="satelite-card-3">
+                <div>
+                    <img class="satelite-img" src="assets/satelite.png" alt="">
+                </div>
+                <div>
+                    <h2 class="satelite-card-heading">Bangladesh Launches New Satellite</h2>
+                    <img class="al-jazeera" src="assets/al-jazeera.png" alt="">
+                    <p class="date">Date: 05/01/2025 &nbsp Time: 10.25 PM</p>
+                    <p>Not until the creation and maintenance of decent conditions of life for all people are recognized
+                        and accepted as a common obligation of all people and all countries—not until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized
+                    </p>
+                    <button class="satelite-card-btn">Read More</button>
+                </div>
+            </div>
+        </div>
+        <div>
+            <h2>Donate Today</h2>
+            <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting
+                inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital
+                transformation, and robust infrastructure.
             </p>
         </div>
     </main>
