--- a/index.html
+++ b/index.html
@@ -138,14 +138,42 @@
                 </div>
             </div>
         </div>
-        <div>
-            <h2>Donate Today</h2>
-            <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting
-                inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital
-                transformation, and robust infrastructure.
-            </p>
+        <div class="donate-section">
+            <div>
+                <h2 class="donate-heading">Donate Today</h2>
+                <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology,
+                    promoting
+                    inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital
+                    transformation, and robust infrastructure.
+                </p>
+            </div>
+            <div>
+                <div class="donate-card">
+                    <div>
+                        <button class="taka-btn amount">100 Taka</button>
+                    </div>
+                    <div>
+                        <button class="diff-color taka-btn amount">200 Taka</button>
+                    </div>
+                    <div>
+                        <button class="taka-btn amount">500 Taka</button>
+                    </div>
+                    <div>
+                        <button class="taka-btn amount">1000 Taka</button>
+                    </div>
+                </div>
+                <div>
+                    <input type="text" placeholder="Other Amount (Taka)">
+                    <br>
+                    <button class="donate-btn">
+                        Done Now
+                    </button>
+                </div>
+            </div>
         </div>
     </main>
 </body>
-
+<footer>
+    
+</footer>
 </html>
