finished newsletter section

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 </div>
             </div>
         </div>
-        <div class="donate-section">
+        <div class="text-align">
             <div>
                 <h2 class="donate-heading">Donate Today</h2>
                 <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology,
@@ -163,7 +163,7 @@
                     </div>
                 </div>
                 <div>
-                    <input type="text" placeholder="Other Amount (Taka)">
+                    <input class="text-align donate-input" type="text" placeholder="Other Amount (Taka)">
                     <br>
                     <button class="donate-btn">
                         Done Now
@@ -174,6 +174,24 @@
     </main>
 </body>
 <footer>
-    
+    <div class="newsletter-section">
+        <div class="text-align">
+            <h2 class="newsletter-heading">Subscribe Newsletter</h2>
+            <p>
+                Subscribe to the Bangladesh 2.0 newsletter and be part of the journey <br> toward a tech-driven,
+                inclusive future.
+            </p>
+        </div>
+        <div>
+            <input class="newsletter-input" type="text" placeholder="Enter your email here"><button
+                class="subscribe-btn">
+                Subscribe
+            </button>
+            <p class="text-align">
+                We promise not to spam you!
+            </p>
+        </div>
+    </div>
 </footer>
+
 </html>
